--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -16,7 +16,6 @@ cabal-version:       >=1.10
 library
   exposed-modules: Pure.Elm
   build-depends:       base >=4.11 && <4.12,
-                       pure >=0.7 && <1,
-                       pure-router >=0.7 && <1
+                       pure >=0.7 && <1
   hs-source-dirs:      src
   default-language:    Haskell2010
