--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -15,7 +15,9 @@ cabal-version:       >=1.10
 
 library
   exposed-modules: Pure.Elm
+                   Pure.Elm.Subscriptions
   build-depends:       base >=4.11 && <4.12,
-                       pure >=0.7 && <1
+                       pure >=0.7 && <1,
+                       containers
   hs-source-dirs:      src
   default-language:    Haskell2010
