--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -18,6 +18,7 @@ library
                    Pure.Elm.Subscriptions
   build-depends:       base >=4.11 && <4.12,
                        pure >=0.7 && <1,
-                       containers
+                       containers,
+                       stm
   hs-source-dirs:      src
   default-language:    Haskell2010
