Refine Pure.Elm.Application

--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -23,6 +23,7 @@ library
   build-depends:       base,
                        pure,
                        pure-router,
+                       pure-txt,
                        containers,
                        stm
   hs-source-dirs:      src
