--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -20,11 +20,17 @@ library
                    Pure.Elm.Application
                    Pure.Elm.Memo
                    Pure.Elm.Sub
+
   build-depends:       base,
                        pure,
                        pure-router,
                        pure-txt,
                        containers,
                        stm
+
   hs-source-dirs:      src
+
+  if (impl(ghcjs))
+    js-sources: js/hostname.js
+
   default-language:    Haskell2010
