--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -31,6 +31,6 @@ library
   hs-source-dirs:      src
 
   if (impl(ghcjs))
-    js-sources: js/hostname.js
+    js-sources: js/url.js
 
   default-language:    Haskell2010
