First-pass rewrite of Memo.

--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -26,7 +26,8 @@ library
                        pure-router,
                        pure-txt,
                        containers,
-                       stm
+                       stm,
+                       hashable
 
   hs-source-dirs:      src
 
