URI encode locations on route.

--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -29,6 +29,7 @@ library
                        pure-lifted,
                        pure-router,
                        pure-txt,
+                       pure-uri,
                        containers,
                        stm,
                        hashable
