--- a/pure-elm.cabal
+++ b/pure-elm.cabal
@@ -23,6 +23,9 @@ library
                    Pure.Elm.Component
                    Pure.Elm.Memo
                    Pure.Elm.Sub
+                   Pure.Elm.Fold
+                   Pure.Elm.Store
+                   Pure.Elm.Has
 
   build-depends:       base,
                        pure,
@@ -33,7 +36,7 @@ library
                        containers,
                        stm,
                        hashable,
-                       reflection
+                       ghc-prim
 
   hs-source-dirs:      src
 
